@@ -52,6 +52,7 @@ People/companies who were/are contributing code to cocos2d for iPhone (alphabeti
 	Many improvements in the OpenGL ES 2.0 code: better error reporting, better blending function, better shader code
 	Author of CCDrawNode: a node that batches drawing primitives
 	Author of CCPhysicsDebugNode and CCPhysicsSprite
+	Fix assert on Texture when updating filter on NPOT textures
 
 * Viktor Lidholt (http://www.cocosbuilder.com)
 	LabelTTF loads custom fonts correctly on Mac
